fix(payment): PAYMENTS-11661 Reduce the spacing, styling text for auto vaulting disclaimer

--- a/packages/core/src/scss/components/foundation/forms/_forms.scss
+++ b/packages/core/src/scss/components/foundation/forms/_forms.scss
@@ -28,6 +28,10 @@
         }
     }
 
+    .form-fieldset--storedInstrument,.form-fieldset--creditCardFieldset {
+        margin-bottom: 10px;
+    }
+
     #checkoutShippingAddress.form-fieldset:has(.floating-form-field) {
         margin-bottom: $fontSize-root - $floating-form-field-spacing;
     }
